FestinaLenteApp/src/objects/Printing__c.object
<CustomObject>
    <description>Parameters used to define what to print. Not persisted.</description>
    <fields>
        <fullName>Format__c</fullName>
        <label>Format</label>
        <picklist>
            <picklistValues>
                <fullName>PDF</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>HTML</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Friday__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Friday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <label>From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Layout__c</fullName>
        <label>Layout</label>
        <picklist>
            <picklistValues>
                <fullName>Landscape</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Portrait</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Monday__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Monday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Saturday__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Saturday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sunday__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Sunday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Thursday__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Thursday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <label>To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tuesday__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Tuesday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Private Lesson Timetable</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Term Riding Timetable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Wednesday__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Wednesday</label>
        <type>Checkbox</type>
    </fields>
    <label>Printing</label>
    <nameField>
        <displayFormat>P-{000000000}</displayFormat>
        <label>Printing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Printing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>